log
Sat 24 Sep 2022 09:17:34 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap  new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9b1cf2e
Sat 24 Sep 2022 09:17:49 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap  new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
adfc744
Sat 24 Sep 2022 09:18:20 PM UTC: 
 treemap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0eb827c
Sat 24 Sep 2022 09:18:33 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
37ec6a6
